# secure_cloud_storage

./: .gitignore  README.md  example.env  pyproject.toml  test.txt
docs/: 01_Design_and_basic_implementation.md  02_Encryption_algorithm.md  03_KMS_Implementation.md  04_Server_side.md  IMPLEMENTATION_STRATEGY.md
src/secure_cloud_storage/: __init__.py  __main__.py  config.py  main.py
src/secure_cloud_storage/cli/: __init__.py  main.py
src/secure_cloud_storage/client/: __init__.py  service.py
src/secure_cloud_storage/crypto/: __init__.py  utils.py
src/secure_cloud_storage/kms/: __init__.py  store.py
src/secure_cloud_storage/storage/: __init__.py  backend.py
src/secure_cloud_storage/ui/: app.py
